build/tree-sitter-c-sharp/corpus/expressions.txt
=====================================
Ternary Expression
=====================================

class Foo {
  void Test() {
    x ? "foo" : "bar";
  }
}

---

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (void_keyword)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (expression_statement
            (conditional_expression
              condition: (identifier)
              consequence: (string_literal)
              alternative: (string_literal))))))))

=====================================
Binary Expressions
=====================================

class Foo {
  void Test() {
    x == y;
    1 + 2;
  }
}

---

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (void_keyword)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (expression_statement
            (binary_expression
              left: (identifier)
              right: (identifier)))
          (expression_statement
            (binary_expression
              left: (integer_literal)
              right: (integer_literal))))))))

=====================================
Ternary expressions is type
=====================================

var t = x is int
  ? a
  : b;

---

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration (implicit_type)
        (variable_declarator (identifier)
          (equals_value_clause
            (conditional_expression
              (is_expression (identifier) (predefined_type))
              (identifier)
              (identifier))))))))

=====================================
Ternary expressions is nullable type
=====================================

var u = x is int?
  ? a
  : b;

---

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration (implicit_type)
        (variable_declarator (identifier)
          (equals_value_clause
            (conditional_expression
              (is_expression (identifier) (nullable_type (predefined_type)))
              (identifier)
              (identifier))))))))

=====================================
Prefix-Unary Expressions
=====================================

class Foo {
  void Test() {
    ++x;
    --y;
  }
}

---

(compilation_unit
  (class_declaration
    (identifier)
    (declaration_list
      (method_declaration
        (void_keyword)
        (identifier)
        (parameter_list)
        (block
        (expression_statement
          (prefix_unary_expression
            (identifier)))
        (expression_statement
          (prefix_unary_expression
            (identifier))))))))

=====================================
Cast expressions
=====================================

void Test() {
  a = (B)c + (C)d;
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (expression_statement (assignment_expression
          (identifier)
          (assignment_operator)
          (binary_expression
            (cast_expression (identifier) (identifier))
            (cast_expression (identifier) (identifier)))))))))

=====================================
Cast expression of array access
=====================================

b = (float)a[0];

---

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression (identifier) (assignment_operator)
        (cast_expression (predefined_type)
          (element_access_expression (identifier)
            (bracketed_argument_list (argument (integer_literal)))))))))

=====================================
Precedence of unary prefix operator and element access
=====================================

b = +a[0];

---

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression (identifier) (assignment_operator)
        (prefix_unary_expression
          (element_access_expression (identifier)
            (bracketed_argument_list (argument (integer_literal)))))))))

=====================================
Precedence of switch_expression and binary_expression 
=====================================

b = 2 * a switch
{
    1 => 1,
    _ => 0,
};

---

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression (identifier) (assignment_operator)
        (binary_expression (integer_literal)
          (switch_expression (identifier)
            (switch_expression_arm (constant_pattern (integer_literal)) (integer_literal))
            (switch_expression_arm (discard) (integer_literal))))))))

============================
Anonymous object creation with empty body
============================

void b() {
  var x = new {
  };
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
            (identifier)
              (equals_value_clause
                (anonymous_object_creation_expression)))))))))

============================
Target-type object creation
============================

void b() {
  Friend friend = new("hi");
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (identifier)
            (variable_declarator
            (identifier)
              (equals_value_clause
                (implicit_object_creation_expression
                  (argument_list (argument (string_literal))))))))))))

============================
Anonymous object creation with single unnamed
============================

void b() {
  var x = new {
    args
  };
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
            (identifier)
              (equals_value_clause
                (anonymous_object_creation_expression (identifier))))))))))

============================
Anonymous object creation with single named
============================

void b() {
  var x = new {
    test = "This"
  };
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
            (identifier)
              (equals_value_clause
                (anonymous_object_creation_expression
                  (name_equals
                    (identifier))
                  (string_literal))))))))))

============================
Checked expressions
============================

void b() {
  var three = checked(1 + 2);
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (checked_expression
                  (binary_expression
                    (integer_literal)
                    (integer_literal)))))))))))

============================
Object creation expressions
============================

void b() {
  new C.D(1, "hi");
  a = new E
  {
    Foo = bar,
  };

  b = new E(1);

  c = new E(1) { };
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (expression_statement
          (object_creation_expression
            (qualified_name (identifier) (identifier))
            (argument_list
              (argument (integer_literal))
              (argument (string_literal)))))
        (expression_statement
          (assignment_expression
            (identifier)
            (assignment_operator)
            (object_creation_expression
              (identifier)
              (initializer_expression
                (assignment_expression
                  (identifier) (assignment_operator) (identifier))))))
        (expression_statement
          (assignment_expression
            (identifier)
            (assignment_operator)
            (object_creation_expression
              (identifier)
              (argument_list (argument (integer_literal))))))
        (expression_statement
          (assignment_expression
            (identifier)
            (assignment_operator)
            (object_creation_expression
              (identifier)
              (argument_list (argument (integer_literal)))
              (initializer_expression))))))))

============================
Named parameters in constructors
============================

void b() {
  var z = new C(a: 1, b: "hi");
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration (implicit_type)
            (variable_declarator (identifier)
              (equals_value_clause
                (object_creation_expression (identifier)
                  (argument_list
                    (argument (name_colon (identifier)) (integer_literal))
                    (argument (name_colon (identifier)) (string_literal))))))))))))

============================
Named parameters in method calls
============================

void b() {
  z = A.B(a: 1, b: "hi");
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (expression_statement
          (assignment_expression (identifier) (assignment_operator)
            (invocation_expression
              (member_access_expression (identifier) (identifier))
              (argument_list
                (argument (name_colon (identifier)) (integer_literal))
                (argument (name_colon (identifier)) (string_literal))))))))))

============================
Named parameters using contextually reserved words
============================

void b() {
  resultNode  = B(from: 1, into: "hi");
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (expression_statement
          (assignment_expression (identifier) (assignment_operator)
            (invocation_expression (identifier)
              (argument_list
                (argument (name_colon (identifier)) (integer_literal))
                (argument (name_colon (identifier)) (string_literal))))))))))

============================
Anonymous method expressions
============================

void a() {
  delegate(int a) {
    return a;
  };
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (expression_statement
          (anonymous_method_expression
            (parameter_list (parameter (predefined_type) (identifier)))
            (block (return_statement (identifier)))))))))

============================
Anonymous method expression with discard parameters
============================

void a() {
  delegate(int _, int _) {
    return a;
  };
}

---

(compilation_unit
  (global_statement
    (local_function_statement
      (void_keyword)
      (identifier)
      (parameter_list)
      (block
        (expression_statement
          (anonymous_method_expression
            (parameter_list
              (parameter (predefined_type) (identifier))
              (parameter (predefined_type) (identifier)))
            (block (return_statement (identifier)))))))))

============================
Lambda expressions
============================

void a() {
  x => x + 1;
  (A a, B b) => { return a.c(b); };
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (expression_statement
          (lambda_expression
            (identifier)
            (binary_expression (identifier) (integer_literal))))
        (expression_statement
          (lambda_expression
            (parameter_list
              (parameter (identifier) (identifier))
              (parameter (identifier) (identifier)))
            (block (return_statement
              (invocation_expression
                (member_access_expression (identifier) (identifier))
                (argument_list (argument (identifier))))))))))))

============================
Async Lambda
============================

void a()
{
    Do(async () => {});
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (expression_statement (invocation_expression (identifier)
        (argument_list
          (argument (lambda_expression (parameter_list) (initializer_expression))))))))))

============================
Lambda expression with qualifiers
============================

void a() {
  var lam = static x => x + 1;
  var bda = async x => x + 1;
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (lambda_expression
                  (identifier)
                  (binary_expression
                    (identifier)
                    (integer_literal)))))))
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (lambda_expression
                  (identifier)
                  (binary_expression
                    (identifier)
                    (integer_literal)))))))))))

============================
Lambda expression with discard parameters
============================

void a() {
  var lam = (_, _) => 0;
  var bda = (int _, int _) => 0;
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (lambda_expression
                  (parameter_list
                    (parameter (identifier))
                    (parameter (identifier)))
                  (integer_literal))))))
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (lambda_expression
                  (parameter_list
                    (parameter (predefined_type) (identifier))
                    (parameter (predefined_type) (identifier)))
                  (integer_literal))))))))))

============================
Lambda expression with ref modifier
============================

MyIntDelegate a = (ref int i) => i + 1;

---

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        (identifier)
        (variable_declarator
          (identifier)
          (equals_value_clause
            (lambda_expression
              (parameter_list
                (parameter
                  (parameter_modifier)
                  (predefined_type)
                  (identifier)))
              (binary_expression
                (identifier)
                (integer_literal)))))))))

============================
Invocation expressions
============================

void a() {
  b(c, in d, out e, ref f, out var g);
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (expression_statement
          (invocation_expression
            (identifier)
            (argument_list
              (argument (identifier))
              (argument (identifier))
              (argument (identifier))
              (argument (identifier))
              (argument (declaration_expression (implicit_type) (identifier))))))))))

============================
Tuple expressions
============================

void a() {
  b = (c, d: "e");
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (expression_statement
          (assignment_expression (identifier) (assignment_operator)
          (tuple_expression
            (argument (identifier))
            (argument
              (name_colon (identifier))
              (string_literal)))))))))

============================
Implicit array creation
============================

void b() {
  var z = new [] { 1, 2, 3 };
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (implicit_array_creation_expression
                  (initializer_expression
                    (integer_literal)
                    (integer_literal)
                    (integer_literal)))))))))))

============================
Implicit multi array creation
============================

void b() {
  var z = new [,] { { 1, 1 }, { 2, 2 }, { 3, 3 } };
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (implicit_array_creation_expression
                  (initializer_expression
                    (initializer_expression
                      (integer_literal)
                      (integer_literal))
                    (initializer_expression
                      (integer_literal)
                      (integer_literal))
                    (initializer_expression
                      (integer_literal)
                      (integer_literal))))))))))))

============================
Stackalloc implicit array
============================

void b() {
  var z = stackalloc [] { 1, 2, 3 };
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (implicit_stack_alloc_array_creation_expression
                  (initializer_expression
                    (integer_literal)
                    (integer_literal)
                    (integer_literal)))))))))))

============================
Stackalloc explicit array
============================

void b() {
  var z = stackalloc int[] { 1, 2, 3 };
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (stack_alloc_array_creation_expression
                  (array_type (predefined_type) (array_rank_specifier))
                  (initializer_expression
                    (integer_literal)
                    (integer_literal)
                    (integer_literal)))))))))))

============================
Explicit array creation
============================

void b() {
  var z = new int[3] { 1, 2, 3 };
  var b = new byte[,] { { 1, 2 }, { 2, 3 } };
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (array_creation_expression
                  (array_type
                    (predefined_type)
                    (array_rank_specifier (integer_literal)))
                  (initializer_expression
                    (integer_literal)
                    (integer_literal)
                    (integer_literal)))))))
          (local_declaration_statement
            (variable_declaration
              (implicit_type)
              (variable_declarator
                (identifier)
                (equals_value_clause
                  (array_creation_expression
                    (array_type
                      (predefined_type)
                      (array_rank_specifier))
                    (initializer_expression
                      (initializer_expression
                        (integer_literal)
                        (integer_literal))
                      (initializer_expression
                        (integer_literal)
                        (integer_literal))))))))))))

============================
Explicit multi array creation
============================

void b() {
  var z = new int[3,2] { { 1, 1 }, { 2, 2 }, { 3, 3 } };
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (array_creation_expression
                  (array_type
                    (predefined_type)
                    (array_rank_specifier
                      (integer_literal)
                      (integer_literal)))
                  (initializer_expression
                    (initializer_expression
                      (integer_literal)
                      (integer_literal))
                    (initializer_expression
                      (integer_literal)
                      (integer_literal))
                    (initializer_expression
                      (integer_literal)
                      (integer_literal))))))))))))

============================
Array of named tuple
============================

void a() {
  var z = new (string b, string c)[3];
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (array_creation_expression
                  (array_type
                    (tuple_type
                      (tuple_element
                        (predefined_type)
                        (identifier))
                      (tuple_element
                        (predefined_type)
                        (identifier)))
                  (array_rank_specifier
                    (integer_literal))))))))))))

============================
Makeref
============================

void b() {
  var gp = __makeref(g);
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (make_ref_expression
                  (identifier))))))))))

============================
Postfix unary
============================

void b() {
  a--;
  a++;
  var b=a!;
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (expression_statement (postfix_unary_expression (identifier)))
        (expression_statement (postfix_unary_expression (identifier)))
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (postfix_unary_expression
                  (identifier))))))))))

============================
__reftype
============================

void b() {
  var z = __reftype(g);
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (ref_type_expression
                  (identifier))))))))))

============================
__refvalue
============================

void b() {
  var z = __refvalue(g, int);
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (ref_value_expression
                  (identifier)
                  (predefined_type))))))))))

============================
sizeof
============================

void b() {
  var z = sizeof(int);
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (size_of_expression
                  (predefined_type))))))))))

============================
typeof
============================

void b() {
  var y = typeof(int);
  var z = typeof(List<string>.Enumerator);
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration (implicit_type)
            (variable_declarator (identifier)
              (equals_value_clause
                (type_of_expression (predefined_type))))))
          (local_declaration_statement
            (variable_declaration (implicit_type)
              (variable_declarator (identifier)
                (equals_value_clause
                  (type_of_expression
                    (qualified_name
                      (generic_name (identifier) (type_argument_list (predefined_type)))
                      (identifier)))))))))))

============================
switch expression
============================

void b() {
  var r = operation switch {
      1 => "one",
      2 => "two",
      _ => "more"
  };
}

---

(compilation_unit
  (global_statement
    (local_function_statement (void_keyword) (identifier) (parameter_list)
      (block
        (local_declaration_statement
